Create TorrentFile Entity. Add settings for xdebug

--- a/app/translations/messages.ru.yaml
+++ b/app/translations/messages.ru.yaml
@@ -1,3 +1,6 @@
 Login Form: Форма входа
 Password: Пароль
 login: войти
+Sign in: Войти
+Sign up: Зарегистрироваться
+Load Torrent: Загрузить Торрент
